--- a/ricopili/Dockerfile
+++ b/ricopili/Dockerfile
@@ -19,120 +19,8 @@ RUN apt-get update && \
 
 ENV PKG_CONFIG_PATH=/usr/bin:/usr/lib/pkgconfig:/usr/share/pkgconfig:/usr/local/lib/pkgconfig:/usr/local/share/pkgconfig 
 ENV PATH=/usr/bin:/ricopili/dependencies/Minimac3:/ricopili/dependencies/bcftools:/ricopili/dependencies/bgzip:/ricopili/dependencies/eagle:/ricopili/dependencies/eigensoft/EIG-6.1.4/bin:/ricopili/dependencies/impute_v2:/ricopili/dependencies/impute_v4:/ricopili/dependencies/latex:/ricopili/dependencies/ldsc:/ricopili/dependencies/liftover:/ricopili/dependencies/metal:/ricopili/dependencies/shapeit:/ricopili/dependencies/shapeit3:/ricopili/dependencies/tabix:$PATH
+RUN locate xml | grep '\.pc'
 
 RUN mkdir -p /ricopili/dependencies/R_packages && \
     chmod -R 755 /ricopili/dependencies/R_packages
 
-FROM rocker/rstudio:4.0.0
-
-#, lib='/ricopili/dependencies/R_packages'
-#, lib='/usr/local/lib/R/site-library'
-#'mvoutlier', 'qqman', 'rJava', 'rsq', 'xlsx', 'xlsxjars', 
-#RUN R -e "install.packages(c(corrgram', 'corrplot', 'd3heatmap', 'data.table', 'DescTools', 'doBy', 'dplyr', 'extrafont', 'extrafontdb', 'foreign', 'forestplot', 'forestploter', 'gdata', 'ggcorrplot', 'ggplot2', 'gtools', 'haven', 'igraph', 'jpeg', 'lattice', 'lubridate', 'meta', 'metafor', 'OpenMx', 'pheatmap', 'plyr', 'png', 'psych', 'randomForest', 'RColorBrewer', 'readxl', 'remotes', 'reshape', 'reshape2', 'rmarkdown', 'scatterplot3d', 'scales', 'sem', 'semTools', 'stringr', 'sysfonts', 'systemfonts', 'tibble', 'tidyr', 'ukbtools', 'VennDiagram', 'viridis', 'viridisLite', 'vroom', 'writexl', 'WriteXLS', 'xtable'), repos='https://cloud.r-project.org')"
-
-RUN Rscript -e 'dir.create(Sys.getenv("R_LIBS_USER"), recursive = TRUE)'  # create personal library
-RUN Rscript -e '.libPaths(Sys.getenv("R_LIBS_USER"))'  # add to the path
-
-RUN Rscript -e 'install.packages(c("BiocManager", "remotes", "devtools"), repos="https://cloud.r-project.org")'
-#Sys.unsetenv("GITHUB_PAT")
-RUN Rscript -e 'remotes::install_github("kenhanscombe/ukbtools", dependencies = TRUE)'
-RUN Rscript -e "remotes::install_github('DudbridgeLab/avengeme')"
-RUN Rscript -e "remotes::install_github('MathiasHarrer/dmetar')"
-RUN Rscript -e "remotes::install_github('kassambara/easyGgplot2')"
-RUN Rscript -e "remotes::install_github('ramiromagno/gwasrapidd')"
-RUN Rscript -e "remotes::install_github('https://github.com/josefin-werme/LAVA.git')"
-#Install postgwas from GitHub via devtools:
-#setRepositories(ind = 1:6)
-#SAIGE is an R package with Scalable and Accurate Implementation of Generalized mixed model (Chen, H. et al. 2016). It accounts for sample relatedness and is feasible for genetic association tests in large cohorts and biobanks (N > 400,000).
-RUN Rscript -e 'remotes::install_github("leeshawn/MetaSKAT")'
-RUN Rscript -e 'remotes::install_github("weizhouUMICH/SAIGE")'
-#LDpred - R-based
-RUN Rscript -e 'remotes::install_github("https://github.com/privefl/bigsnpr.git")'
-RUN Rscript -e "remotes::install_github('merns/postgwas')"
-RUN Rscript -e "remotes::install_github('MRCIEU/TwoSampleMR')"
-RUN Rscript -e "remotes::install_github('ozancinar/poolR')"
-RUN Rscript -e "BiocManager::install('ASSET')"
-RUN Rscript -e "BiocManager::install('gwascat')"
-RUN Rscript -e "BiocManager::install('snpStats')"
-
-
-#Added by me
-RUN curl -Lo /tmp/bedtools-2.30.0.tgz https://github.com/arq5x/bedtools2/releases/download/v2.30.0/bedtools-2.30.0.tar.gz && \
-    tar zxvf /tmp/bedtools-2.30.0.tgz -C /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm /tmp/bedtools-2.30.0.tgz 
-RUN git clone https://github.com/vcftools/vcftools.git /tmp/ && \
-    cd /tmp/vcftools && ./autogen.sh && ./configure && make && make install && \
-    cp -r /tmp/vcftools /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm -r /tmp/vcftools 
-RUN git clone https://github.com/fhormoz/caviar.git /tmp/ && \
-    cd /tmp/caviar/CAVIAR-C++ && make && make install && \
-    cp -r /tmp/caviar /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm -r /tmp/caviar   
-RUN git clone https://github.com/gkichaev/PAINTOR_V3.0.git /tmp/ && \
-    cd /tmp/PAINTOR_V3.0 && bash install.sh && \
-    cp -r /tmp/PAINTOR_V3.0 /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm -r /tmp/PAINTOR_V3.0 
-RUN curl -Lo /tmp/gcta-1.94.1.zip https://yanglab.westlake.edu.cn/software/gcta/bin/gcta-1.94.1-linux-kernel-3-x86_64.zip && \
-    unzip /tmp/gcta-1.94.1.zip -C /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm /tmp/gcta-1.94.1.zip 
-RUN curl -Lo /tmp/locuszoom_1.3.tgz https://statgen.sph.umich.edu/locuszoom/download/locuszoom_1.3.tgz && \
-    tar zxvf /tmp/locuszoom_1.3.tgz -C /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm /tmp/locuszoom_1.3.tgz 
-RUN curl -Lo /tmp/finemap_v1.1.tgz http://www.christianbenner.com/finemap_v1.1_x86_64.tgz && \
-    tar zxvf /tmp/finemap_v1.1.tgz -C /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm /tmp/finemap_v1.1.tgz 
-RUN curl -Lo /tmp/magma_v1.10.zip https://ctg.cncr.nl/software/MAGMA/prog/magma_v1.10.zip && \
-    unzip /tmp/magma_v1.10.zip -C /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm /tmp/magma_v1.10.zip 
-RUN curl -Lo /tmp/annovar.tgz http://www.openbioinformatics.org/annovar/download/0wgxR2rIVP/annovar.latest.tar.gz && \
-    tar zxvf /tmp/annovar.tgz -C /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm /tmp/annovar.tgz 
-RUN curl -Lo /tmp/PRSice_2.3.5.zip https://github.com/choishingwan/PRSice/releases/download/2.3.5/PRSice_linux.zip && \
-    unzip /tmp/PRSice_2.3.5.zip -C /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm /tmp/PRSice_2.3.5.zip
-RUN curl -Lo /tmp/mach_1.0.18.tgz http://csg.sph.umich.edu/abecasis/MaCH/download/mach.1.0.18.Linux.tgz && \
-    tar zxvf /tmp/mach_1.0.18.tgz -C /ricopili/dependencies/ && \
-    chmod 755 /ricopili/dependencies/ && \
-    rm /tmp/mach_1.0.18.tgz
-
-#MiXeR - (was MATLAB and) Python-based 
-RUN git clone --recurse-submodules -j8 https://github.com/precimed/mixer.git /tmp/ && \
-    mkdir mixer/src/build && cd mixer/src/build && \
-    cmake .. && make bgmg -j16 && \                                # if you use GCC compiler
-    #CC=icc CXX=icpc cmake .. && make bgmg -j16 && \                # if you use Intel compiler
-    #cmake .. -DBOOST_ROOT=$HOME/boost_1_69_0 && make bgmg -j16 && \  # if you use locally compiled boost
-    cp -r /tmp/mixer /ricopili/dependencies/ 
-#pleiofdr - MATLAB and Python-based
-RUN git clone https://github.com/precimed/pleiofdr.git /tmp/ && \
-    cd /tmp/pleiofdr && \
-    wget https://precimed.s3-eu-west-1.amazonaws.com/pleiofdr/pleioFDR_demo_data.tar.gz && \
-    tar -xzvf pleioFDR_demo_data.tar.gz && \
-    #matlab -nodisplay -nosplash < runme.m
-    cp -r /tmp/pleiofdr /ricopili/dependencies/ 
-#mostest - MATLAB and Python-based
-RUN git clone https://github.com/precimed/mostest.git /tmp/ && \
-    cd /tmp/mostest && \
-    cp -r /tmp/mostest /ricopili/dependencies/ 
-
-
-#RUN R -e "install.packages('cmutils', repos =NULL, type='source')"
-
-#Original dependencies
-ENV PATH=/ricopili/dependencies/Minimac3:/ricopili/dependencies/bcftools:/ricopili/dependencies/bgzip:/ricopili/dependencies/eagle:/ricopili/dependencies/eigensoft/EIG-6.1.4/bin:/ricopili/dependencies/impute_v2:/ricopili/dependencies/impute_v4:/ricopili/dependencies/latex:/ricopili/dependencies/ldsc:/ricopili/dependencies/liftover:/ricopili/dependencies/metal:/ricopili/dependencies/shapeit:/ricopili/dependencies/shapeit3:/ricopili/dependencies/tabix:$PATH
-#Added by me
-ENV PATH=/ricopili/dependencies/bedtools-2.30.0:/ricopili/dependencies/vcftools:/ricopili/dependencies/caviar:/ricopili/dependencies/PAINTOR_V3.0:/ricopili/dependencies/gcta-1.94.1:/ricopili/dependencies/locuszoom_1.3:/ricopili/dependencies/finemap_v1.1:/ricopili/dependencies/magma_v1.10:/ricopili/dependencies/annovar:/ricopili/dependencies/PRSice_2.3.5:/ricopili/dependencies/mach_1.0.18:/ricopili/dependencies/pleiofdr:/ricopili/dependencies/mixer:/ricopili/dependencies/mostest:$PATH
-
-EXPOSE 8888
-ENTRYPOINT ["jupyter", "lab", "--allow-root", "--ip=0.0.0.0", "--port=8888", "--no-browser"]
-
-CMD ["/bin/bash"]
