--- a/ricopili/Dockerfile
+++ b/ricopili/Dockerfile
@@ -5,9 +5,9 @@ LABEL org.opencontainers.image.source="https://github.com/gblokland/jupyterlab"
 WORKDIR /root
 
 RUN apt-get update && \
-    apt-get install -y wget vim rsync git tree tk build-essential pkg-config bash-completion bc sudo gpg && \
-    #which pkg-config && ls $PKG_CONFIG_PATH && \
-    apt-get install -y libxml2-dev libfontconfig1-dev 
+    apt-get install -y pkg-config && \
+    #apt-get install -y wget vim rsync git tree tk build-essential bash-completion bc sudo gpg && \
+    apt-get install -y libxml2-dev libfontconfig1-dev && \
     #apt-get install -y zlib1g-dev libudunits2-dev libgdal-dev libcairo2-dev libgsl-dev libv8-dev libmagick++-dev && \
     #apt-get install -y liblapack-dev libblas-dev libharfbuzz-dev libfribidi-dev && \
     apt-get install -y python3-pip python3-dev && pip3 install --upgrade pip && \
@@ -19,7 +19,7 @@ RUN apt-get update && \
 
 ENV PKG_CONFIG_PATH=/usr/bin/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig:/usr/local/lib/pkgconfig:/usr/local/share/pkgconfig 
 ENV PATH=/usr/bin:/ricopili/dependencies/Minimac3:/ricopili/dependencies/bcftools:/ricopili/dependencies/bgzip:/ricopili/dependencies/eagle:/ricopili/dependencies/eigensoft/EIG-6.1.4/bin:/ricopili/dependencies/impute_v2:/ricopili/dependencies/impute_v4:/ricopili/dependencies/latex:/ricopili/dependencies/ldsc:/ricopili/dependencies/liftover:/ricopili/dependencies/metal:/ricopili/dependencies/shapeit:/ricopili/dependencies/shapeit3:/ricopili/dependencies/tabix:$PATH
-RUN echo $PKG_CONFIG_PATH
+RUN which pkg-config && ls $PKG_CONFIG_PATH && echo $PKG_CONFIG_PATH
 RUN mkdir -p /ricopili/dependencies/R_packages && \
     chmod -R 755 /ricopili/dependencies/R_packages
 
